--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>主页</title>
+    <link rel="stylesheet" href="./res/css/TouHou.css">
+    <title>月战老兵,参上!</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: #f6f6f6;
+        }
+
+        #reisen {
+            background-image: url('./res/image/TouhouProject/reisen.jpeg');
+            background-size: 100%;
+            background-color: #fff;
+        }
+
+        #yrh_ovpn {
+            display: block;
+            margin: 100px auto;
+            line-height: 42px;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-
+<div class="login_box" id="reisen">
+    <div class="review">
+        <a href="./openvpn/yrh.ovpn" class="login_btn" id="yrh_ovpn">点此处获取VPN</a>
+    </div>
+</div>
 </body>
 </html>
