完善了备案号和404页面

--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./res/css/main.css">
     <link rel="stylesheet" href="./res/css/TouHou.css">
     <title>魔理沙偷走了重要的东西</title>
     <style>
@@ -43,6 +44,11 @@
                 <input type="Submit" name="Submit" value="登录" class="login_btn">
             </form>
         </div>
+    </div>
+    <div id="information">
+        <hr>
+        <br />
+        @AKO版权所有      备案号: 闽ICP备2021018232号
     </div>
 </body>
 </html>
