--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./res/css/main.css">
     <link rel="stylesheet" href="./res/css/TouHou.css">
     <title>月战老兵,参上!</title>
     <style>
@@ -36,6 +37,11 @@
     <div class="review">
         <a href="./openvpn/yrh.ovpn" class="login_btn" id="yrh_ovpn">点此处获取VPN</a>
     </div>
+</div>
+<div id="information">
+    <hr>
+    <br />
+    @AKO版权所有      备案号: 闽ICP备2021018232号
 </div>
 </body>
 </html>
