--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./res/css/main.css">
     <link rel="stylesheet" href="./res/css/TouHou.css">
+    <link type="text/css" rel="stylesheet" href="https://webfont.hellofont.cn/webfont/puhuiti-2?weight=35&family=puhuiti-2-35">
     <title>月战老兵,参上!</title>
     <style>
         * {
@@ -30,9 +31,16 @@
             line-height: 42px;
             text-decoration: none;
         }
+
+        #login {
+            float: right;
+        }
     </style>
 </head>
 <body>
+<div class="TouHou_Top">
+    <a href="./login.html" class="box" id="login">登录</a>
+</div>
 <div class="login_box" id="reisen">
     <div class="review">
         <a href="./openvpn/yrh.ovpn" class="login_btn" id="yrh_ovpn">点此处获取VPN</a>
