--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="https://webfont.hellofont.cn/webfont/puhuiti-2?weight=35&family=puhuiti-2-35">
     <link rel="stylesheet" href="./res/css/main.css">
     <link rel="stylesheet" href="./res/css/TouHou.css">
     <title>魔理沙偷走了重要的东西</title>
@@ -29,7 +30,7 @@
 <body>
     <div class="login_box" id="marisa">
         <div class="review">
-            <form action="./res/php/logincheck.php" method="post">
+            <form action="./res/php/conn.php" method="post">
                 <label>
                     用户名:
                     <input type="text" name="username">
